WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
88401
Assigning to a static property should not change iteration order
https://bugs.webkit.org/show_bug.cgi?id=88401
Summary
Assigning to a static property should not change iteration order
Gavin Barraclough
Reported
2012-06-06 01:50:16 PDT
A specific iteration order is not defined by the spec, but test-262 somewhat tenuously requires that it is at least stable, e.g. ch10/10.4/10.4.2/S10.4.2_A1.1_T1.js Whilst it is not clear that this behavior really arises from the specification, it would seem like common sense to conform to this. The problem here is that we allow properties in the structure to shadow those in the static table, and we iterate the properties in the structure first - which means that as values of existing properties are modified, their iteration order changes too. The easy fix is to iterate the properties from the static table first. This has a further benefit, since it will mean that user added properties will come after those present in the static table (respected the expected insertion-order).
Attachments
Add attachment
proposed patch, testcase, etc.
Gavin Barraclough
Comment 1
2012-06-06 15:10:02 PDT
Fixed in
r119623
Geoffrey Garen
Comment 2
2012-06-06 17:34:16 PDT
<
http://trac.webkit.org/changeset/119623
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug